--- a/moby_dick.html
+++ b/moby_dick.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moby Dick</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
-    <header>
-      <h1>A Softcover Book Report</h1>
-      <h2>Moby-Dick (or, The Whale)</h2>
+    <div id="main-nav" class="nav-menu">
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
+      <a href="tags.html" class="nav-spacing">HTML Tags</a>
+    </div>
+
+    <header style="text-align: center; margin: 0 0 80px;">
+      <h1 style="text-align: center;">A Softcover Book Report</h1>
+      <h2 style="text-align: center;">Moby-Dick (or, The Whale)</h2>
     </header>
     <div>
       <p>
@@ -24,15 +30,15 @@
       </p>
     </div>
     <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-      <img src="sperm_whales.jpeg" alt="Moby Dick">
+      <img src="sperm_whales.jpeg" alt="Moby Dick" style="display: block; margin: 0 auto;">
     </a>
 
-    <div>
+    <div style="width: 500px; margin: 20px auto; padding: 30px; background-color: #fafafa;">
       <h3>Moby-Dick: A classic tale of the sea</h3>
 
       <a href="https://www.softcover.io/read/6070fb03/moby-dick"
         target ="_blank" rel="noopener">
-        <img src="moby_dick_cover.png" al="Moby Dick">
+        <img src="moby_dick_cover.png" alt="Moby Dick" height="200px" style="float: left; margin: 0 40px 0 0">
       </a>
 
       <p>
@@ -43,9 +49,9 @@
         </a>
       </p>
 
-      <blockquote>
+      <blockquote style="font-style: italic; font-size: 20px;">
         <p>
-          <span>Call me Ishmael.</span> Some years ago–never mind how long
+          <span style="font-style: normal; font-size: 24px; font-weight: bold; color: #ff000;">Call me Ishmael.</span> Some years ago–never mind how long
           precisely–having little or no money in my purse, and nothing
           particular to interest me on shore, I thought I would sail about a
           little and see the watery part of the world. It is a way I have of
@@ -59,7 +65,6 @@
         jillion pages. The only thing bigger than Moby Dick (who—<em>spoiler
         alert!</em>—is a giant white whale) is the book itself.
       </p>
-    </div>
 
     <h4>Our top 3 favorite things about Moby Dick</h4>
     <ol>
@@ -80,5 +85,6 @@
       </li>
       <li>Mad sea captains are fun</li>
     </ul>
+  </div>
 </body>
 </html>
